--- a/series.conf
+++ b/series.conf
@@ -9963,6 +9963,7 @@
 	patches.suse/iommufd-selftest-Return-the-real-idev-id-from-selftest-mock_doma
 	patches.suse/iommufd-selftest-Add-a-selftest-for-IOMMU_HWPT_ALLOC
 	patches.suse/vfio-Do-not-allow-ops-dma_unmap-in-vfio_pin-unpin_pages
+	patches.suse/iommufd-Allow-passing-in-iopt_access_list_id-to-iopt_remove_acce
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
