--- a/series.conf
+++ b/series.conf
@@ -11590,6 +11590,7 @@
 	patches.suse/selftests-mm-fix-awk-usage-in-charge_reserved_hugetl.patch
 	patches.suse/0001-Crash-add-lock-to-serialize-crash-hotplug-handling.patch
 	patches.suse/modpost-add-missing-else-to-the-of-check.patch
+	patches.suse/iommu-mediatek-Fix-share-pgtable-for-iova-over-4GB
 	patches.suse/iommu-arm-smmu-v3-Fix-soft-lockup-triggered-by-arm_smmu_mm_invalidate_range.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-calculation-of-idt-size.patch
 	patches.suse/ubi-Refuse-attaching-if-mtd-s-erasesize-is-0.patch
