--- a/series.conf
+++ b/series.conf
@@ -9970,6 +9970,7 @@
 	patches.suse/iommufd-selftest-Add-IOMMU_TEST_OP_ACCESS_REPLACE_IOAS-coverage
 	patches.suse/vfio-Support-IO-page-table-replacement
 	patches.suse/iommufd-selftest-Make-the-mock-iommu-driver-into-a-real-driver
+	patches.suse/iommufd-Remove-iommufd_ref_to_users
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
