--- a/series.conf
+++ b/series.conf
@@ -9911,6 +9911,7 @@
 	patches.suse/vfio-iommufd-Move-noiommu-compat-validation-out-of-vfio_iommufd_
 	patches.suse/vfio-iommufd-Split-bind-attach-into-two-steps
 	patches.suse/vfio-Record-devid-in-vfio_device_file
+	patches.suse/vfio-iommufd-Add-detach_ioas-support-for-physical-VFIO-devices
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
