--- a/series.conf
+++ b/series.conf
@@ -9960,6 +9960,7 @@
 	patches.suse/iommufd-Make-destroy_rwsem-use-a-lock-class-per-object-type
 	patches.suse/iommufd-selftest-Test-iommufd_device_replace
 	patches.suse/iommufd-Add-IOMMU_HWPT_ALLOC
+	patches.suse/iommufd-selftest-Return-the-real-idev-id-from-selftest-mock_doma
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
