--- a/series.conf
+++ b/series.conf
@@ -9932,6 +9932,7 @@
 	patches.suse/vfio-pds-Initial-support-for-pds-VFIO-driver
 	patches.suse/pds_core-Require-callers-of-register-unregister-to-pass-PF-drvda
 	patches.suse/vfio-pds-register-with-the-pds_core-PF
+	patches.suse/vfio-pds-Add-VFIO-live-migration-support
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
