--- a/series.conf
+++ b/series.conf
@@ -10401,6 +10401,7 @@
 	patches.suse/iommu-vt-d-Prepare-for-set_dev_pasid-callback
 	patches.suse/iommu-vt-d-Add-set_dev_pasid-callback-for-dma-domain
 	patches.suse/dmaengine-idxd-Re-enable-kernel-workqueue-under-DMA-API
+	patches.suse/iommu-Prevent-RESV_DIRECT-devices-from-blocking-domains
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
