--- a/series.conf
+++ b/series.conf
@@ -9956,6 +9956,7 @@
 	patches.suse/iommufd-Fix-locking-around-hwpt-allocation
 	patches.suse/iommufd-Reorganize-iommufd_device_attach-into-iommufd_device_cha
 	patches.suse/iommu-Introduce-a-new-iommu_group_replace_domain-API
+	patches.suse/iommufd-Add-iommufd_device_replace
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
