--- a/series.conf
+++ b/series.conf
@@ -11594,6 +11594,7 @@
 	patches.suse/iommu-arm-smmu-v3-Avoid-constructing-invalid-range-commands
 	patches.suse/dt-bindings-arm-smmu-Fix-SDM630-clocks-description
 	patches.suse/iommu-arm-smmu-v3-Fix-soft-lockup-triggered-by-arm_smmu_mm_invalidate_range.patch
+	patches.suse/iommu-apple-dart-Handle-DMA_FQ-domains-in-attach_dev
 	patches.suse/ACPI-NFIT-Fix-incorrect-calculation-of-idt-size.patch
 	patches.suse/ubi-Refuse-attaching-if-mtd-s-erasesize-is-0.patch
 	patches.suse/scsi-fnic-Fix-sg_reset-success-path.patch
