--- a/series.conf
+++ b/series.conf
@@ -9969,6 +9969,7 @@
 	patches.suse/iommufd-Add-iommufd_access_replace-API
 	patches.suse/iommufd-selftest-Add-IOMMU_TEST_OP_ACCESS_REPLACE_IOAS-coverage
 	patches.suse/vfio-Support-IO-page-table-replacement
+	patches.suse/iommufd-selftest-Make-the-mock-iommu-driver-into-a-real-driver
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
