--- a/series.conf
+++ b/series.conf
@@ -9923,6 +9923,7 @@
 	patches.suse/vfio-Add-VFIO_DEVICE_BIND_IOMMUFD
 	patches.suse/vfio-Add-VFIO_DEVICE_-AT-DE-TACH_IOMMUFD_PT
 	patches.suse/vfio-Move-the-IOMMU_CAP_CACHE_COHERENCY-check-in-__vfio_register
+	patches.suse/vfio-Compile-vfio_group-infrastructure-optionally
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
