--- a/series.conf
+++ b/series.conf
@@ -13974,6 +13974,7 @@
 	patches.suse/iommu-vt-d-debugfs-Create-remove-debugfs-file-per-device-pasid
 	patches.suse/iommu-vt-d-debugfs-Support-dumping-a-specified-page-table
 	patches.suse/Revert-iommu-vt-d-Remove-unused-function
+	patches.suse/iommu-amd-Remove-unused-amd_io_pgtable.pt_root-variable
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
