--- a/series.conf
+++ b/series.conf
@@ -13092,6 +13092,7 @@
 	patches.suse/vfio-use-__aligned_u64-in-struct-vfio_device_gfx_plane_info
 	patches.suse/vfio-use-__aligned_u64-in-struct-vfio_device_ioeventfd
 	patches.suse/vfio-mlx5-Wake-up-the-reader-post-of-disabling-the-SAVING-migrat
+	patches.suse/vfio-mlx5-Refactor-the-SAVE-callback-to-activate-a-work-only-upo
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
