--- a/series.conf
+++ b/series.conf
@@ -13155,6 +13155,7 @@
 	patches.suse/iommufd-selftest-Add-domain_alloc_user-support-in-iommu-mock
 	patches.suse/iommu-vt-d-Add-domain_alloc_user-op
 	patches.suse/iommufd-selftest-Rework-TEST_LENGTH-to-test-min_size-explicitly
+	patches.suse/iommufd-Correct-IOMMU_HWPT_ALLOC_NEST_PARENT-description
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
