--- a/series.conf
+++ b/series.conf
@@ -14001,6 +14001,7 @@
 	patches.suse/iommu-fsl_pamu-Implement-a-PLATFORM-domain
 	patches.suse/iommu-tegra-gart-Remove-tegra-gart
 	patches.suse/iommu-mtk_iommu_v1-Implement-an-IDENTITY-domain
+	patches.suse/iommu-Reorganize-iommu_get_default_domain_type-to-respect-def_do
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
