--- a/series.conf
+++ b/series.conf
@@ -13094,6 +13094,7 @@
 	patches.suse/vfio-mlx5-Wake-up-the-reader-post-of-disabling-the-SAVING-migrat
 	patches.suse/vfio-mlx5-Refactor-the-SAVE-callback-to-activate-a-work-only-upo
 	patches.suse/vfio-mlx5-Enable-querying-state-size-which-is-4GB
+	patches.suse/vfio-mlx5-Rename-some-stuff-to-match-chunk-mode
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
