--- a/series.conf
+++ b/series.conf
@@ -14515,6 +14515,7 @@
 	patches.suse/iommu-vt-d-Omit-devTLB-invalidation-requests-when-TES-0
 	patches.suse/iommu-vt-d-Disable-PCI-ATS-in-legacy-passthrough-mode
 	patches.suse/iommu-vt-d-Make-context-clearing-consistent-with-context-mapping
+	patches.suse/iommu-vt-d-Add-MTL-to-quirk-list-to-skip-TE-disabling
 	patches.suse/ACPI-video-Use-acpi_video_device-for-cooling-dev-dri.patch
 	patches.suse/cpufreq-amd-pstate-Fix-the-return-value-of-amd_pstat.patch
 	patches.suse/cpufreq-amd-pstate-Fix-scaling_min_freq-and-scaling_.patch
