--- a/series.conf
+++ b/series.conf
@@ -14518,6 +14518,7 @@
 	patches.suse/iommu-vt-d-Add-MTL-to-quirk-list-to-skip-TE-disabling
 	patches.suse/iommu-vt-d-Fix-incorrect-cache-invalidation-for-mm-notification
 	patches.suse/iommu-vt-d-Set-variable-intel_dirty_ops-to-static
+	patches.suse/iommu-Fix-printk-arg-in-of_iommu_get_resv_regions
 	patches.suse/ACPI-video-Use-acpi_video_device-for-cooling-dev-dri.patch
 	patches.suse/cpufreq-amd-pstate-Fix-the-return-value-of-amd_pstat.patch
 	patches.suse/cpufreq-amd-pstate-Fix-scaling_min_freq-and-scaling_.patch
