--- a/series.conf
+++ b/series.conf
@@ -14510,6 +14510,7 @@
 	patches.suse/ALSA-hda-Disable-power-save-on-KONTRON-SinglePC.patch
 	patches.suse/iommu-Flow-ERR_PTR-out-from-__iommu_domain_alloc
 	patches.suse/MAINTAINERS-list-all-Qualcomm-IOMMU-drivers-in-the-QUALCOMM-IOMM
+	patches.suse/iommu-Avoid-more-races-around-device-probe
 	patches.suse/ACPI-video-Use-acpi_video_device-for-cooling-dev-dri.patch
 	patches.suse/cpufreq-amd-pstate-Fix-the-return-value-of-amd_pstat.patch
 	patches.suse/cpufreq-amd-pstate-Fix-scaling_min_freq-and-scaling_.patch
