--- a/series.conf
+++ b/series.conf
@@ -13148,6 +13148,7 @@
 	patches.suse/soc-qcom-pmic_glink-fix-connector-type-to-be-Display.patch
 	patches.suse/iommufd-Fix-spelling-errors-in-comments
 	patches.suse/iommufd-selftest-Iterate-idev_ids-in-mock_domain-s-alloc_hwpt-te
+	patches.suse/iommu-Add-new-iommu-op-to-create-domains-owned-by-userspace
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
