--- a/series.conf
+++ b/series.conf
@@ -13186,6 +13186,7 @@
 	patches.suse/iommufd-selftest-Add-nested-domain-allocation-for-mock-domain
 	patches.suse/iommufd-selftest-Add-coverage-for-IOMMU_HWPT_ALLOC-with-nested-H
 	patches.suse/iommu-vt-d-Enhance-capability-check-for-nested-parent-domain-all
+	patches.suse/iommufd-Add-data-structure-for-Intel-VT-d-stage-1-domain-allocat
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
