--- a/series.conf
+++ b/series.conf
@@ -14047,6 +14047,7 @@
 	patches.suse/iommu-dart-Move-the-blocked-domain-support-to-a-global-static
 	patches.suse/iommu-dart-Convert-to-domain_alloc_paging
 	patches.suse/iommu-dart-Call-apple_dart_finalize_domain-as-part-of-alloc_pagi
+	patches.suse/iommu-dart-Remove-the-force_bypass-variable
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
