--- a/series.conf
+++ b/series.conf
@@ -14029,6 +14029,7 @@
 	patches.suse/iommu-omap-Update-to-map-unmap-_pages
 	patches.suse/iommu-rockchip-Update-to-map-unmap-_pages
 	patches.suse/iommu-sun50i-Update-to-map-unmap-_pages
+	patches.suse/iommu-tegra-smmu-Update-to-map-unmap-_pages
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
