--- a/series.conf
+++ b/series.conf
@@ -13958,6 +13958,7 @@
 	patches.suse/iommu-arm-smmu-qcom-Add-SM7150-SMMUv2
 	patches.suse/iommu-arm-smmu-v3-Move-ctx_desc-out-of-s1_cfg
 	patches.suse/iommu-arm-smmu-v3-Replace-s1_cfg-with-cdtab_cfg
+	patches.suse/iommu-arm-smmu-v3-Encapsulate-ctx_desc_cfg-init-in-alloc_cd_tabl
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
