--- a/series.conf
+++ b/series.conf
@@ -13986,6 +13986,7 @@
 	patches.suse/iommu-amd-Rename-ats-related-variables
 	patches.suse/iommu-amd-Introduce-iommu_dev_data.ppr
 	patches.suse/iommu-amd-Introduce-iommu_dev_data.flags-to-track-device-capabil
+	patches.suse/iommu-amd-Enable-device-ATS-PASID-PRI-capabilities-independently
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
