--- a/series.conf
+++ b/series.conf
@@ -13971,6 +13971,7 @@
 	patches.suse/iommu-virtio-Add-__counted_by-for-struct-viommu_request-and-use-
 	patches.suse/iommu-vt-d-Remove-unused-function
 	patches.suse/iommu-vt-d-debugfs-Dump-entry-pointing-to-huge-page
+	patches.suse/iommu-vt-d-debugfs-Create-remove-debugfs-file-per-device-pasid
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
