--- a/series.conf
+++ b/series.conf
@@ -13160,6 +13160,7 @@
 	patches.suse/vfio-Move-iova_bitmap-into-iommufd
 	patches.suse/iommufd-iova_bitmap-Move-symbols-to-IOMMUFD-namespace
 	patches.suse/iommu-Add-iommu_domain-ops-for-dirty-tracking
+	patches.suse/iommufd-Add-a-flag-to-enforce-dirty-tracking-on-attach
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
