--- a/series.conf
+++ b/series.conf
@@ -13997,6 +13997,7 @@
 	patches.suse/iommu-Add-iommu_ops-identity_domain
 	patches.suse/iommu-Add-IOMMU_DOMAIN_PLATFORM
 	patches.suse/powerpc-iommu-Setup-a-default-domain-and-remove-set_platform_dma
+	patches.suse/iommu-Add-IOMMU_DOMAIN_PLATFORM-for-S390
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
