--- a/series.conf
+++ b/series.conf
@@ -13096,6 +13096,7 @@
 	patches.suse/vfio-mlx5-Enable-querying-state-size-which-is-4GB
 	patches.suse/vfio-mlx5-Rename-some-stuff-to-match-chunk-mode
 	patches.suse/vfio-mlx5-Pre-allocate-chunks-for-the-STOP_COPY-phase
+	patches.suse/vfio-mlx5-Add-support-for-SAVING-in-chunk-mode
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
