--- a/series.conf
+++ b/series.conf
@@ -13953,6 +13953,7 @@
 	patches.suse/xfs-fix-units-conversion-error-in-xfs_bmap_del_extent_delay.patch
 	patches.suse/xfs-make-sure-maxlen-is-still-congruent-with-prod-when-rounding-down.patch
 	patches.suse/xfs-allow-read-IO-and-FICLONE-to-run-concurrently.patch
+	patches.suse/iommu-tegra-smmu-Drop-unnecessary-error-check-for-for-debugfs_cr
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
