--- a/series.conf
+++ b/series.conf
@@ -13088,6 +13088,7 @@
 	patches.suse/cdx-add-support-for-bus-mastering
 	patches.suse/vfio-add-bus-master-feature-to-device-feature-ioctl
 	patches.suse/vfio-cdx-add-bus-mastering-device-feature-support
+	patches.suse/vfio-trivially-use-__aligned_u64-for-ioctl-structs
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
