--- a/series.conf
+++ b/series.conf
@@ -14533,6 +14533,7 @@
 	patches.suse/KVM-PPC-Book3S-HV-Fix-KVM_RUN-clobbering-FP-VEC-user.patch
 	patches.suse/firewire-core-fix-possible-memory-leak-in-create_uni.patch
 	patches.suse/vdpa-mlx5-preserve-CVQ-vringh-index.patch
+	patches.suse/iommufd-selftest-Fix-_test_mock_dirty_bitmaps
 	patches.suse/x86-coco-Disable-32-bit-emulation-by-default-on-TDX-.patch
 	patches.suse/x86-entry-convert-int-0x80-emulation-to-idtentry.patch
 	patches.suse/x86-entry-do-not-allow-external-0x80-interrupts.patch
