--- a/series.conf
+++ b/series.conf
@@ -13168,6 +13168,7 @@
 	patches.suse/iommu-amd-Add-domain_alloc_user-based-domain-allocation
 	patches.suse/iommu-amd-Access-Dirty-bit-support-in-IOPTEs
 	patches.suse/iommu-vt-d-Access-Dirty-bit-support-for-SS-domains
+	patches.suse/iommufd-selftest-Expand-mock_domain-with-dev_flags
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
