--- a/series.conf
+++ b/series.conf
@@ -14026,6 +14026,7 @@
 	patches.suse/iommu-ipmmu-vmsa-Convert-to-generic_single_device_group
 	patches.suse/iommu-omap-Convert-to-generic_single_device_group
 	patches.suse/iommu-exynos-Update-to-map-unmap-_pages
+	patches.suse/iommu-omap-Update-to-map-unmap-_pages
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
