--- a/series.conf
+++ b/series.conf
@@ -14007,6 +14007,7 @@
 	patches.suse/iommu-tegra-smmu-Implement-an-IDENTITY-domain
 	patches.suse/iommu-tegra-smmu-Support-DMA-domains-in-tegra
 	patches.suse/iommu-omap-Implement-an-IDENTITY-domain
+	patches.suse/iommu-msm-Implement-an-IDENTITY-domain
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
