--- a/series.conf
+++ b/series.conf
@@ -13248,6 +13248,7 @@
 	patches.kernel.org/6.1.76-163-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
 	patches.kernel.org/6.1.76-164-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XAK01-.patch
 	patches.kernel.org/6.1.76-165-Revert-powerpc-64s-Increase-default-stack-size.patch
+	patches.kernel.org/6.1.76-166-drm-bridge-parade-ps8640-Wait-for-HPD-when-doi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
