--- a/series.conf
+++ b/series.conf
@@ -13256,6 +13256,7 @@
 	patches.kernel.org/6.1.76-171-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
 	patches.kernel.org/6.1.76-172-drm-bridge-parade-ps8640-Make-sure-we-drop-the.patch
 	patches.kernel.org/6.1.76-173-drm-exynos-fix-accidental-on-stack-copy-of-exy.patch
+	patches.kernel.org/6.1.76-174-drm-exynos-gsc-minor-fix-for-loop-iteration-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
