--- a/series.conf
+++ b/series.conf
@@ -13243,6 +13243,7 @@
 	patches.kernel.org/6.1.76-158-dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.kernel.org/6.1.76-159-serial-core-Provide-port-lock-wrappers.patch
 	patches.kernel.org/6.1.76-160-serial-sc16is7xx-Use-port-lock-wrappers.patch
+	patches.kernel.org/6.1.76-161-serial-sc16is7xx-fix-unconditional-activation-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
