--- a/series.conf
+++ b/series.conf
@@ -13240,6 +13240,7 @@
 	patches.kernel.org/6.1.76-155-ARM-dts-qcom-sdx55-fix-pdc-interrupt-cells.patch
 	patches.kernel.org/6.1.76-156-ARM-dts-qcom-sdx55-fix-USB-DP-DM-HS-PHY-interr.patch
 	patches.kernel.org/6.1.76-157-ARM-dts-qcom-sdx55-fix-USB-SS-wakeup.patch
+	patches.kernel.org/6.1.76-158-dlm-use-kernel_connect-and-kernel_bind.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
