--- a/series.conf
+++ b/series.conf
@@ -13253,6 +13253,7 @@
 	patches.kernel.org/6.1.76-168-drm-bridge-sii902x-Use-devm_regulator_bulk_get.patch
 	patches.kernel.org/6.1.76-169-drm-bridge-sii902x-Fix-probing-race-issue.patch
 	patches.kernel.org/6.1.76-170-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
+	patches.kernel.org/6.1.76-171-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
