--- a/series.conf
+++ b/series.conf
@@ -13260,6 +13260,7 @@
 	patches.kernel.org/6.1.76-175-gpio-eic-sprd-Clear-interrupt-after-set-the-in.patch
 	patches.kernel.org/6.1.76-176-block-Move-checking-GENHD_FL_NO_PART-to-bdev_a.patch
 	patches.kernel.org/6.1.76-177-drm-bridge-anx7625-Ensure-bridge-is-suspended-.patch
+	patches.kernel.org/6.1.76-178-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
