--- a/series.conf
+++ b/series.conf
@@ -13262,6 +13262,7 @@
 	patches.kernel.org/6.1.76-177-drm-bridge-anx7625-Ensure-bridge-is-suspended-.patch
 	patches.kernel.org/6.1.76-178-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
 	patches.kernel.org/6.1.76-179-spi-fix-finalize-message-on-error-return.patch
+	patches.kernel.org/6.1.76-180-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
