--- a/series.conf
+++ b/series.conf
@@ -13234,6 +13234,7 @@
 	patches.kernel.org/6.1.76-149-thermal-intel-hfi-Disable-an-HFI-instance-when.patch
 	patches.kernel.org/6.1.76-150-thermal-intel-hfi-Add-syscore-callbacks-for-sy.patch
 	patches.kernel.org/6.1.76-151-fs-pipe-move-check-to-pipe_has_watch_queue.patch
+	patches.kernel.org/6.1.76-152-pipe-wakeup-wr_wait-after-setting-max_usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
