--- a/series.conf
+++ b/series.conf
@@ -13246,6 +13246,7 @@
 	patches.kernel.org/6.1.76-161-serial-sc16is7xx-fix-unconditional-activation-.patch
 	patches.kernel.org/6.1.76-162-btrfs-zoned-factor-out-prepare_allocation_zone.patch
 	patches.kernel.org/6.1.76-163-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
+	patches.kernel.org/6.1.76-164-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XAK01-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
