--- a/series.conf
+++ b/series.conf
@@ -13258,6 +13258,7 @@
 	patches.kernel.org/6.1.76-173-drm-exynos-fix-accidental-on-stack-copy-of-exy.patch
 	patches.kernel.org/6.1.76-174-drm-exynos-gsc-minor-fix-for-loop-iteration-in.patch
 	patches.kernel.org/6.1.76-175-gpio-eic-sprd-Clear-interrupt-after-set-the-in.patch
+	patches.kernel.org/6.1.76-176-block-Move-checking-GENHD_FL_NO_PART-to-bdev_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
