--- a/series.conf
+++ b/series.conf
@@ -13237,6 +13237,7 @@
 	patches.kernel.org/6.1.76-152-pipe-wakeup-wr_wait-after-setting-max_usage.patch
 	patches.kernel.org/6.1.76-153-ARM-dts-qcom-sdx55-fix-USB-wakeup-interrupt-ty.patch
 	patches.kernel.org/6.1.76-154-ARM-dts-samsung-exynos4210-i9100-Unconditional.patch
+	patches.kernel.org/6.1.76-155-ARM-dts-qcom-sdx55-fix-pdc-interrupt-cells.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
