--- a/series.conf
+++ b/series.conf
@@ -13236,6 +13236,7 @@
 	patches.kernel.org/6.1.76-151-fs-pipe-move-check-to-pipe_has_watch_queue.patch
 	patches.kernel.org/6.1.76-152-pipe-wakeup-wr_wait-after-setting-max_usage.patch
 	patches.kernel.org/6.1.76-153-ARM-dts-qcom-sdx55-fix-USB-wakeup-interrupt-ty.patch
+	patches.kernel.org/6.1.76-154-ARM-dts-samsung-exynos4210-i9100-Unconditional.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
