--- a/series.conf
+++ b/series.conf
@@ -13252,6 +13252,7 @@
 	patches.kernel.org/6.1.76-167-drm-panel-simple-add-missing-bus-flags-for-Tia.patch
 	patches.kernel.org/6.1.76-168-drm-bridge-sii902x-Use-devm_regulator_bulk_get.patch
 	patches.kernel.org/6.1.76-169-drm-bridge-sii902x-Fix-probing-race-issue.patch
+	patches.kernel.org/6.1.76-170-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
