--- a/series.conf
+++ b/series.conf
@@ -13244,6 +13244,7 @@
 	patches.kernel.org/6.1.76-159-serial-core-Provide-port-lock-wrappers.patch
 	patches.kernel.org/6.1.76-160-serial-sc16is7xx-Use-port-lock-wrappers.patch
 	patches.kernel.org/6.1.76-161-serial-sc16is7xx-fix-unconditional-activation-.patch
+	patches.kernel.org/6.1.76-162-btrfs-zoned-factor-out-prepare_allocation_zone.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
