--- a/series.conf
+++ b/series.conf
@@ -13242,6 +13242,7 @@
 	patches.kernel.org/6.1.76-157-ARM-dts-qcom-sdx55-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.1.76-158-dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.kernel.org/6.1.76-159-serial-core-Provide-port-lock-wrappers.patch
+	patches.kernel.org/6.1.76-160-serial-sc16is7xx-Use-port-lock-wrappers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
