--- a/series.conf
+++ b/series.conf
@@ -724,6 +724,7 @@
 	########################################################
 	# sorted patches
 	########################################################
+	patches.suse/bcachefs-fix-incorrect-usage-of-REQ_OP_FLUSH.patch
 	patches.suse/futex-Prevent-the-reuse-of-stale-pi_state.patch
 	patches.suse/mm-huge_memory-don-t-force-huge-page-alignment-on-32.patch
 
