--- a/series.conf
+++ b/series.conf
@@ -8047,6 +8047,7 @@
 	patches.suse/mm-compaction-remove-unnecessary-cursor-page-in-isolate_freepages_block.patch
 	patches.suse/mm-compaction-remove-unnecessary-else-continue-at-end-of-loop-in-isolate_freepages_block.patch
 	patches.suse/mm-hugetlb-use-flush_hugetlb_tlb_range-in-move_huget.patch
+	patches.suse/maple_tree-add-hex-output-to-maple_arange64-dump.patch
 	patches.suse/mm-compaction-correct-last_migrated_pfn-update-in-compact_zone.patch
 	patches.suse/mm-compaction-skip-page-block-marked-skip-in-isolate_migratepages_block.patch
 	patches.suse/mm-compaction-correct-comment-of-fast_find_migrateblock-in-isolate_migratepages.patch
